--- a/docs/settings.ini
+++ b/docs/settings.ini
@@ -8,10 +8,11 @@ version = "0.1.0"
 copyright = "Invenzzia Group 2008"
 copyrightLink = "http://www.invenzzia.org/"
 license = "GNU Free Documentation License 2.1"
-licenseLink = "#"
+licenseLink = "http://www.gnu.org/licenses/fdl.html"
 
 ; Some rendering settings etc.
 
 outputs = "xhtml, xhtml_single"
 baseLanguage = "pl"
-navigation = "flat"
+navigation = "book"
+showNumbers = true
