--- a/docs/settings.ini
+++ b/docs/settings.ini
@@ -5,7 +5,7 @@
 
 title = "TypeFriendly"
 version = "0.1"
-copyright = "Invenzzia Group 2008"
+copyright = "Invenzzia Group 2008-2009"
 copyrightLink = "http://www.invenzzia.org/"
 license = "GNU Free Documentation License 2.1"
 licenseLink = "http://www.gnu.org/licenses/fdl.html"
