* [0.1] some overlooked mistakes in docs fixed * [0.1] changed default docs language to "en"

--- a/docs/settings.ini
+++ b/docs/settings.ini
@@ -13,6 +13,6 @@ licenseLink = "http://www.gnu.org/licenses/fdl.html"
 ; Some rendering settings etc.
 
 outputs = "xhtml, xhtml_single"
-baseLanguage = "pl"
+baseLanguage = "en"
 navigation = "book"
 showNumbers = true
